# lrgv

./: .gitignore  LICENSE  README.md  app_settings.py  archive_clip_creator.py  archive_clips.py  check_json_load_save.py  clip.py  clip_archiver.py  file_lister.py  file_mover.py  file_system_clip_source.py  logging_utils.py  old_bird_clip_mover.py  pyproject.toml  simulate_detection.py
dataflow/: __init__.py  affine_transformer.py  connection.py  data.py  dataflow_error.py  graph.py  input_port.py  linear_graph.py  output_port.py  port.py  processor.py  simple_processor.py  simple_processor_mixin.py  simple_sink.py  simple_sink_mixin.py  simple_source.py  simple_source_mixin.py
dataflow/tests/: processor_test_case.py  processors.py  test_graph.py  test_processor.py
lrgv/archiver/: app_settings.py  app_settings_lighthouse.py  app_settings_lrgv.py  archive_clip_creator.py  archive_clips.py  archive_clips_lighthouse.py  archive_clips_lrgv.py  archive_lrgv_clips.py  archive_missing_recordings_lrgv.py  archiver_error.py  classified_old_bird_clip_archiver.py  clip.py  clip_archiver.py  clip_audio_file_copier.py  clip_audio_file_s3_uploader.py  clip_deleter.py  clip_lister.py  clip_mover.py  create_recording_metadata_files_lrgv.py  detector_clip_deleter.py  file_deleter.py  file_lister.py  file_mover.py  file_system_clip_source.py  old_bird_clip_converter.py  old_bird_clip_deleter.py  old_bird_clip_mover.py  recording.py  recording_lister.py  recording_mover.py  vesper_clip_creator.py  vesper_recording_creator.py
lrgv/archiver/tests/: test_clip.py  test_recording.py
lrgv/archiver/tests/data/: Clip 0.json  Clip 1.json  Recording 0.json  Recording 1.json
lrgv/dataflow/: __init__.py  connection.py  graph.py  input_port.py  linear_graph.py  mixins.py  output_port.py  port.py  processor.py  simple_processor.py  simple_processor_mixin.py  simple_sink.py  simple_sink_mixin.py  simple_source.py  simple_source_mixin.py
lrgv/dataflow/tests/: processor_test_case.py  processors.py  test_graph.py  test_processor.py
lrgv/nighthawk/: README.md  extract_nighthawk_clips_lrgv.py  run_nighthawk.py  run_nighthawk_lighthouse.py  run_nighthawk_lrgv.py  species_code_mapping.json
lrgv/scripts/: add_file_name_column_to_recording_file_list.py  archive_missing_2025_recordings_lrgv.py  create_metadata_yaml.py  create_recording_metadata_files_lighthouse.py  create_recording_metadata_files_lrgv.py  filter_nighthawk_logs.py  fix_2025_nighthawk_clip_files.py  fix_2026_json_mic_output_names.py  fix_nighthawk_clip_files.py  fix_roma_hs_nighthawk_clip_files.py  list_audio_files.py  list_missing_dick_r_clip_files.py  move_clip_files.py  replace_string_in_json_files.py  simulate_detection.py  simulate_detection_lighthouse.py  simulate_detection_lrgv.py  transfer_glassofire_clip_classifications.py  trim_nighthawk_output_file_line_annotations.py  update_nighthawk_clip_metadata_files.py
lrgv/util/: arg_utils.py  bunch.py  file_utils.py  logging_utils.py  test_case.py  vesper_utils.py
lrgv/util/tests/: test_arg_utils.py
