# pyproject.toml for `lrgv` pip package.
#
# To create a Python environment named `lrgv` in which to work on
# the `lrgv` package:
#
#     conda create -n lrgv python=3.12
#     conda activate lrgv
#     pip install -e <lrgv package dir path>


[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'lrgv'
version = '0.0.0'
description = """\
    Software for Old Bird Lower Rio Grande Valley (LRGV) acoustic \
    monitoring project.\
    """
# readme = 'README.md'
requires-python = '~=3.13.0'
# license = {file = 'LICENSE'}
authors = [
    {name = 'Harold Mills', email = 'harold.mills@gmail.com'},
]
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
]
dependencies = [
    'boto3',
    'environs',
    'requests',
    'ruamel_yaml',
]

[project.scripts]
run_nighthawk_lrgv = 'lrgv.nighthawk.run_nighthawk_lrgv:main'
run_nighthawk_lighthouse = 'lrgv.nighthawk.run_nighthawk_lighthouse:main'
archive_clips_lrgv = 'lrgv.archiver.archive_clips_lrgv:main'
archive_clips_lighthouse = 'lrgv.archiver.archive_clips_lighthouse:main'
